--- a/static/src/pug/layouts/includes/navigation/topnav.pug
+++ b/static/src/pug/layouts/includes/navigation/topnav.pug
@@ -1,6 +1,6 @@
 nav.sb-topnav.navbar.navbar-expand.navbar-dark.bg-dark
   a.navbar-brand(href='index.html')
-    | Start Bootstrap
+    | RTS
   button#sidebarToggle.btn.btn-link.btn-sm.order-1.order-lg-0(href='#')
     i.fas.fa-bars
   // Navbar Search
